--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     }
     </script>
 </head>
-
+INJECTED
 <body>
     <div id="support-root"></div>
     <div id="home-root" class="home-root"></div>
